CSS/style.css
@font-face {
    font-family : "Numans";
    src : url("../Fonts/numans/Numans-Regular.woff2"),
    url("../Fonts/numans/Numans-Regular.woff");
    font-weight : normal;
    font-style : normal;
}

body {
    display: flex;
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
    margin: 0;
    font-family: "Numans";
    text-align: center;
}


/***** B A N N I È R E *****/

header  {
    display: flex;
    justify-content: center;
    width: 75%;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
}

header img {
    width: 200px;
    padding: 0.1% 1%;
}

nav {
    width: 75%;
    background-color: goldenrod;
    position: sticky;
    top: 0;
    z-index: 10;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
}

nav a {
    text-decoration: none;
    text-transform: uppercase;
    color: #fff;
    padding: 1em 1em;
}

nav a:hover{
    color: black;
}

nav ul {
    list-style: none;
    display: flex;
    justify-content: space-around;
    padding-inline-start: 0px;
}


/***** C O R P S   D E   P A G E *****/

main {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    background-color: #F6F6F6;
    width: 75%;
    padding-top: 2%;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
}


main div {
    display: flex;
    flex-direction: column;
    align-items: center;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
    width: 95%;
    margin-bottom: 2%;
}


/* Bienvenue */

.bienvenue video {
    width: 100%;
    height: 100%;
}


/* Plats du jour */

.plat-du-jour {
    flex-direction: row;
}

.plat-du-jour img {
    width: 40%;
}

.plat-du-jour p {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    margin-left: 10%;
    margin-right: 10%;
}

/* Plats favoris */

.plats-favoris td {
    position: relative;
}

.plats-favoris img {
    display: block;
    width: 100%;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: white;
}

.plats-favoris td:hover .overlay {
  opacity: .8;
}

.plats-favoris td p {
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}


/* Carte */

.tablink {
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 14px 16px;
  font-size: 18px;
  width: 25%;
}

.tablink:hover {
  background-color: rgba(204, 153, 50, 0.5);
}


/* Équipe */

.equipe p {
    margin-left: 10%;
    margin-right: 10%;
}

.slideshow {
    box-shadow: 0px 0px 0;
}

@keyframes animate {
    from {right: -300px; opacity: 0} to {right: 0; opacity: 1}
}

.animation {
    position: relative;
    animation: animate 0.4s
}

.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    transition: 0.4s;
}

.active, .accordion:hover {
    background-color: #ccc;
}

.accordion:after {
    content: '\002B';
    color: #777;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}

.active:after {
    content: "\2212";
}

.panel {
    padding: 0 18px;
    background-color: white;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}

/***** P I E D  D E  P A G E *****/

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-direction: column;
    width: 75%;
    height: 24%;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
}

/* ---- MENU HAMBURGER ---- */

#hamburger{
    display: none;
}

.titre-mobile{
    display: none;
}

@media screen and (max-width:575px) {

    .titre-mobile{
        display: block;
    }

    body{
        display: block;
    }

	#hamburger{
        display: block;
    }

    nav{
        display: none;
    }

    #menuToggle
    {
        display: block;
        position: relative;
        top: 50px;
        left: 10px;
        
        z-index: 1;
        
        -webkit-user-select: none;
        user-select: none;
    }  
 
    #menuToggle a
    {
        text-decoration: none;
        color: #232323;
        
        transition: color 0.3s ease;
    }
 
    #menuToggle a:hover
    {
        color: tomato;
    }

 
    #menuToggle input
    {
        display: block;
        width: 40px;
        height: 32px;
        position: absolute;
        top: -7px;
        left: -5px;
        
        cursor: pointer;
        
        opacity: 0; 
        z-index: 2; 
        
        -webkit-touch-callout: none;
    }
 

    #menuToggle span
    {
        display: block;
        width: 25px;
        height: 4px;
        margin-bottom: 5px;
        position: relative;
        
        background: #cdcdcd;
        border-radius: 3px;
        
        z-index: 1;
        
        transform-origin: 4px 0px;
        
        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                    opacity 0.55s ease;
    }
 
    #menuToggle span:first-child
    {
        transform-origin: 0% 0%;
    }
 
    #menuToggle span:nth-last-child(2)
    {
        transform-origin: 0% 100%;
    }
 
    #menuToggle input:checked ~ span
    {
        opacity: 1;
        transform: rotate(45deg) translate(-2px, -1px);
        background: #232323;
    }
 
    #menuToggle input:checked ~ span:nth-last-child(3)
    {
        opacity: 0;
        transform: rotate(0deg) scale(0.2, 0.2);
    }
 
    #menuToggle input:checked ~ span:nth-last-child(2)
    {
        transform: rotate(-45deg) translate(0, -1px);
    }
 
    #menu
    {
        position: absolute;
        width: 300px;
        margin: -100px 0 0 -50px;
        padding: 50px;
        padding-top: 125px;
        
        background: #ededed;
        list-style-type: none;
        -webkit-font-smoothing: antialiased;
        
        transform-origin: 0% 0%;
        transform: translate(-100%, 0);
        
        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
    }
 
    #menu li
    {
        padding: 10px 0;
        font-size: 22px;
    }
 
    #menuToggle input:checked ~ ul
    {
        transform: none;
    }

    .plat-du-jour img {
        height: 30%;
    }

    .plat-du-jour {
        display: flex;
        flex-direction: column;
        size: 10%;
    }


    main{
        margin-left: 10%;
    }

    h1{
        display: none;
    }
    footer{
        margin-left: 10%;

    }
}

